feat: meralion service on much larger server than M4 Pro
